--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="week-2-assignment.css" rel="stylesheet" type="text/css" />
+    <link href="week2-project.css" rel="stylesheet" type="text/css" />
     <title>Divya week2 assignment</title>
   </head>
   <body>
